# python-sdk

./: .coverage  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  changelog.py  pyproject.toml  requirements-dev.txt  requirements-genproto.txt  setup.py  tox.ini
.github/workflows/: checks.yml  genproto.yml  pre-commit.yml  release.yml  run-tests.yml  tests.yml
examples/compute/: main.py
examples/create-delete-instance/: main.py
examples/dataproc/: main.py  using_wrapper.py  using_wrapper_miminal.py  using_wrapper_minimal.py
examples/marketplace/metering-api/: main.py
examples/mdb/clickhouse/: main.py
examples/mdb/mongodb/: main.py
examples/mdb/mysql/: main.py
examples/mdb/postgresql/: main.py
examples/mdb/redis/: main.py
examples/spark/: main.py
tests/: conftest.py  grpc_server_mock.py  metadata_server_mock.py  test_backoff.py  test_channel_cache.py  test_dataproc_retry.py  test_endpoints_ovirride.py  test_metadata_auth.py  test_operation_waiter.py  test_retry_interceptor.py  test_retry_policy.py  test_sdk.py  test_service_account_auth.py
yandex/api/: operation_pb2.py
yandex/cloud/: validation_pb2.py  validation_pb2.pyi  validation_pb2_grpc.py
yandex/cloud/access/: access_pb2.py  access_pb2.pyi  access_pb2_grpc.py
yandex/cloud/ai/common/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py
yandex/cloud/airflow/v1/: cluster_pb2.py  cluster_pb2.pyi  cluster_pb2_grpc.py  cluster_service_pb2.py  cluster_service_pb2.pyi  cluster_service_pb2_grpc.py  cluster_service_pb2_grpc.pyi  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  maintenance_pb2.py  maintenance_pb2_grpc.py  package_options_pb2.py  package_options_pb2_grpc.py
yandex/cloud/api/: operation_pb2.py  operation_pb2.pyi  operation_pb2_grpc.py
yandex/cloud/apploadbalancer/v1/: backend_group_pb2.py  backend_group_pb2.pyi  backend_group_pb2_grpc.py  backend_group_service_pb2.py  backend_group_service_pb2.pyi  backend_group_service_pb2_grpc.py  backend_group_service_pb2_grpc.pyi  http_router_pb2.py  http_router_pb2.pyi  http_router_pb2_grpc.py  http_router_service_pb2.py  http_router_service_pb2.pyi  http_router_service_pb2_grpc.py  http_router_service_pb2_grpc.pyi  load_balancer_pb2.py  load_balancer_pb2.pyi  load_balancer_pb2_grpc.py  load_balancer_service_pb2.py  load_balancer_service_pb2.pyi  load_balancer_service_pb2_grpc.py  load_balancer_service_pb2_grpc.pyi  logging_pb2.py  logging_pb2.pyi  logging_pb2_grpc.py  package_options_pb2.py  package_options_pb2_grpc.py  payload_pb2.py  payload_pb2.pyi  payload_pb2_grpc.py  rate_limit_pb2.py  rate_limit_pb2.pyi  rate_limit_pb2_grpc.py  target_group_pb2.py  target_group_pb2.pyi  target_group_pb2_grpc.py  target_group_service_pb2.py  target_group_service_pb2.pyi  target_group_service_pb2_grpc.py  target_group_service_pb2_grpc.pyi  tls_pb2.py  (+9 more)
yandex/cloud/audittrails/v1/: package_options_pb2.py  package_options_pb2_grpc.py  trail_pb2.py  trail_pb2.pyi  trail_pb2_grpc.py  trail_service_pb2.py  trail_service_pb2.pyi  trail_service_pb2_grpc.py  trail_service_pb2_grpc.pyi
yandex/cloud/backup/v1/: backup_pb2.py  backup_pb2.pyi  backup_pb2_grpc.py  backup_service_pb2.py  backup_service_pb2.pyi  backup_service_pb2_grpc.py  backup_service_pb2_grpc.pyi  package_options_pb2.py  package_options_pb2_grpc.py  policy_pb2.py  policy_pb2.pyi  policy_pb2_grpc.py  policy_service_pb2.py  policy_service_pb2.pyi  policy_service_pb2_grpc.py  policy_service_pb2_grpc.pyi  provider_service_pb2.py  provider_service_pb2.pyi  provider_service_pb2_grpc.py  provider_service_pb2_grpc.pyi  resource_pb2.py  resource_pb2.pyi  resource_pb2_grpc.py  resource_service_pb2.py  resource_service_pb2.pyi  resource_service_pb2_grpc.py  resource_service_pb2_grpc.pyi  setup_service_pb2.py  setup_service_pb2.pyi  setup_service_pb2_grpc.py  setup_service_pb2_grpc.pyi
yandex/cloud/baremetal/v1alpha/: configuration_pb2.py  configuration_pb2.pyi  configuration_pb2_grpc.py  configuration_service_pb2.py  configuration_service_pb2.pyi  configuration_service_pb2_grpc.py  configuration_service_pb2_grpc.pyi  dhcp_pb2.py  dhcp_pb2.pyi  dhcp_pb2_grpc.py  disk_pb2.py  disk_pb2.pyi  disk_pb2_grpc.py  hardware_pool_pb2.py  hardware_pool_pb2.pyi  hardware_pool_pb2_grpc.py  hardware_pool_service_pb2.py  hardware_pool_service_pb2.pyi  hardware_pool_service_pb2_grpc.py  hardware_pool_service_pb2_grpc.pyi  image_pb2.py  image_pb2.pyi  image_pb2_grpc.py  image_service_pb2.py  image_service_pb2.pyi  image_service_pb2_grpc.py  image_service_pb2_grpc.pyi  package_options_pb2.py  package_options_pb2_grpc.py  private_cloud_connection_pb2.py  private_cloud_connection_pb2.pyi  private_cloud_connection_pb2_grpc.py  private_cloud_connection_service_pb2.py  private_cloud_connection_service_pb2.pyi  private_cloud_connection_service_pb2_grpc.py  private_cloud_connection_service_pb2_grpc.pyi  private_subnet_pb2.py  private_subnet_pb2.pyi  private_subnet_pb2_grpc.py  private_subnet_service_pb2.py  (+59 more)
yandex/cloud/billing/v1/: sku_pb2.py  (+39 more)
yandex/cloud/endpoint/: api_endpoint_pb2.py  api_endpoint_pb2.pyi  api_endpoint_pb2_grpc.py  api_endpoint_service_pb2.py  api_endpoint_service_pb2.pyi  api_endpoint_service_pb2_grpc.py  api_endpoint_service_pb2_grpc.pyi
yandex/cloud/oauth/: claims_pb2.py  claims_pb2.pyi  claims_pb2_grpc.py
yandex/cloud/operation/: operation_pb2.py  operation_pb2.pyi  operation_pb2_grpc.py  operation_service_pb2.py  operation_service_pb2.pyi  operation_service_pb2_grpc.py  operation_service_pb2_grpc.pyi  package_options_pb2.py  package_options_pb2_grpc.py
yandex/cloud/quota/: quota_pb2.py  quota_pb2.pyi  quota_pb2_grpc.py
yandex/cloud/reference/: reference_pb2.py  reference_pb2.pyi  reference_pb2_grpc.py
yandexcloud/: __init__.py  _auth_fabric.py  _auth_plugin.py  _backoff.py  _channels.py  _helpers.py  _operation_waiter.py  _retry_interceptor.py  _retry_policy.py  _sdk.py  auth.py  operations.py
yandexcloud/_wrappers/: __init__.py
yandexcloud/_wrappers/dataproc/: __init__.py
yandexcloud/_wrappers/spark/: __init__.py
(+2812 files in other folders)
