[build-system]
requires = ["setuptools~=69.1"]  # https://stackoverflow.com/a/78160378
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variable = "setup.py:__version__"
# https://python-semantic-release.readthedocs.io/en/latest/configuration.html#major-on-zero
major_on_zero = false
commit_parser="changelog.parse_commit"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
